[package]
name = "arduino-zero"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
samd21 = { path = "../../bobbin-mcu/bobbin-sam/samd21"}
r0 = "0.1.0"

[features]
default = ["samd21/SAMD21x18"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true