[package]
name = "discovery-stm32f4"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
#stm32f4 = { git = "https://github.com/bobbin-rs/bobbin-stm32"}
stm32f40x = { path = "../../bobbin-mcu/bobbin-stm32/stm32f40x"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[features]
default = ["stm32f40x/STM32F407VG"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true