[package]
name = "ek-tm4c1294xl"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
#tm4c129x = { git = "https://github.com/bobbin-rs/bobbin-ti"}
tm4c129x = { path = "../../bobbin-mcu/bobbin-ti/tm4c129x/"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[features]
default = ["tm4c129x/TM4C1294NC"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true