[package]
name = "feather-m0"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]
build = "build.rs"

[features]
no_bootloader = []

[dependencies]
#samd = { git = "https://github.com/bobbin-rs/bobbin-sam"}
samd = { path = "../../bobbin-sam/samd"}
r0 = "0.1.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true