[package]
name = "frdm-k64f"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]
build = "build.rs"

[dependencies]
k64 = { git = "https://github.com/bobbin-rs/bobbin-kinetis"}
#k64 = { path = "../../bobbin-kinetis/k64"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]
