[package]
name = "frdm-k64f"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
#k64 = { git = "https://github.com/bobbin-rs/bobbin-kinetis"}
k64 = { path = "../../bobbin-mcu/bobbin-kinetis/k64"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[features]
default = ["k64/K64FN1M0"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true