[package]
name = "frdm-kl26z"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
#kl26 = { git = "https://github.com/bobbin-rs/bobbin-kinetis"}
kl26 = { path = "../../bobbin-mcu/bobbin-kinetis/kl26"}
r0 = "0.1.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[features]
default = ["kl26/Z128"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true