[package]
name = "frdm-kl26z"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
kl26 = { path = "../../bobbin-mcu/bobbin-kinetis/kl26"}
r0 = "0.1.0"

[features]
default = ["kl26/Z128"]
allow-cop = []

#[[examples]]
#name = "cop"
#required-features = ["allow-cop"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true