[package]
name = "nucleo-f031k6"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]
build = "build.rs"

[dependencies]
stm32l0 = { git = "https://github.com/bobbin-rs/bobbin-stm32"}
#stm32l0 = { path = "../../bobbin-stm32/stm32l0"}
r0 = "0.1.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]
