[package]
name = "nucleo-f031k6"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]
build = "build.rs"

[build-dependencies]
bobbin-sexp = { git = "https://github.com/bobbin-rs/bobbin-sexp" }
bobbin-sexp-tokenizer = { git = "https://github.com/bobbin-rs/bobbin-sexp" }

[dependencies]
#stm32l0 = { git = "https://github.com/bobbin-rs/bobbin-stm32"}
stm32l031x = { path = "../../bobbin-stm32/stm32l031x"}
r0 = "0.1.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true