[package]
name = "nucleo-f103rb"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
stm32f10x = { path = "../../bobbin-mcu/bobbin-stm32/stm32f10x"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[features]
default = ["stm32f10x/STM32F10xB"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true