[package]
name = "nucleo-f303ze"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]
#build = "build.rs"

[dependencies]
#stm32f3 = { git = "https://github.com/bobbin-rs/bobbin-stm32"}
stm32f3 = { path = "../../bobbin-stm32/stm32f3"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[features]
default = ["stm32f3/stm32f303rex"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true