[package]
name = "nucleo-l031k6"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
stm32l031x = { path = "../../bobbin-mcu/bobbin-stm32/stm32l031x"}
r0 = "0.1.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[features]
default = ["stm32l031x/stm32l031k6"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true