[package]
name = "s32k144evb"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]
build = "build.rs"

[dependencies]
#s32k144 = { git = "https://github.com/bobbin-rs/bobbin-kinetis"}
s32k144 = { path = "../../bobbin-kinetis/s32k144"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"
features = ["mem","c"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true