[package]
name = "teensy-35"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false


[dependencies]
k64 = { path = "../../bobbin-mcu/bobbin-kinetis/k64"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[features]
default = ["k64/K64FX512"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true