[package]
name = "examples"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[dependencies]
bobbin-mcu = { path = "../../lib/bobbin-mcu"}
bobbin-hal = { path = "../../lib/bobbin-hal"}
bobbin-sys = { path = "../../lib/bobbin-sys"}
bobbin-ipc = { path = "../../lib/bobbin-ipc"}
embedded-hal = "0.1.2"