[package]
name = "bobbin-nucleo-f746zg-example"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "blinky"
path = "src/blinky.rs"
doc = false

[[bin]]
name = "console"
path = "src/console.rs"
doc = false

[dependencies]
nucleo-f746zg = { path = "../../board/nucleo-f746zg" }

[profile.dev]
panic = "abort"
opt-level = "s"
incremental = false
lto = true

[profile.release]
panic = "abort"
opt-level = "s"
debug = true
incremental = false
lto = true