[package]
name = "evb-s32k144"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
s32 = { path = "../../mcu/bobbin-kinetis/s32"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[features]
default = ["s32/K144"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true