[package]
name = "nucleo-f303re"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
stm32f303x = { path = "../../mcu/bobbin-stm32/stm32f303x"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[features]
default = ["stm32f303x/stm32f303xe"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true