[package]
name = "silabs-slstk3401a"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
efm32pg12 = { path = "../../mcu/bobbin-silabs/efm32pg12"}
r0 = "0.1.0"
log = { version="0.3", default-features = false }

[features]
default = ["efm32pg12/EFM32PG12B500F1024"]

[profile.dev]
panic = "abort"
opt-level = "s"
lto = false

[profile.release]
panic = "abort"
debug = true
lto = true