[package]
name = "%name%"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies.cortex-m-rt]
features = []
version = "0.6"

[dependencies.panic-abort]
version = "0.3"

[dev-dependencies]
examples = { path = "../../app/examples" }
embedded-hal = "0.1.2"

[profile.dev]
panic = "abort"
opt-level = "s"
incremental = false
lto = true

[profile.release]
panic = "abort"
debug = true
lto = true

[features]
no-heap = []
default = ["no-heap"]
