[package]
name = "arduino-zero"
version = "0.1.0"
authors = ["Jonathan Soo <jcsoo@agora.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies.cortex-m-rt]
features = []
cortex-m-rt = "0.5.1"

[dependencies.panic-abort]
version = "0.2.0"

[dev-dependencies]
examples = { path = "../../app/examples" }
embedded-hal = "0.2.1"

[profile.dev]
panic = "abort"
opt-level = "s"
incremental = false
#lto = true

[profile.release]
panic = "abort"
debug = true
#lto = true


[dependencies.samd21]
path = "../../mcu/bobbin-sam/samd21"
features = ["SAMD21x18"]

